CSS - Add some spacing around the play audio icon to avoid elements bumping up right against the edge of the screen

--- a/source/css/all.css.scss
+++ b/source/css/all.css.scss
@@ -174,6 +174,7 @@ $page_gutter: 20px;
   .translation-row {
     display: flex;
     justify-content: space-around;
+    padding: 0 1em 0 2em;
   }
 
   .example-row {
